WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286118
Prepare AXObjectCache to be moved to be owned by Page instead of Document
https://bugs.webkit.org/show_bug.cgi?id=286118
Summary
Prepare AXObjectCache to be moved to be owned by Page instead of Document
Alex Christensen
Reported
2025-01-16 21:38:15 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-01-16 21:38:25 PST
<
rdar://problem/143103591
>
Alex Christensen
Comment 2
2025-01-16 21:43:23 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39174
EWS
Comment 3
2025-01-17 15:44:32 PST
Committed
289089@main
(f1ec9aeef00e): <
https://commits.webkit.org/289089@main
> Reviewed commits have been landed. Closing PR #39174 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug