Prepare AXObjectCache to be moved to be owned by Page instead of Document https://bugs.webkit.org/show_bug.cgi?id=286118 rdar://143103591

Reviewed by Brady Eidson.

The AXObjectCache is currently owned by the main frame's Document,
but it is desired that there be one per Page even in iframe processes
with site isolation enabled.  That means that we will need to make
an AXObjectCache when there is no main frame Document in the current
process.  To prepare for that, make the Document pointer a WeakPtr
instead of a WeakRef.

* Source/WebCore/accessibility/AXGeometryManager.cpp:
(WebCore::AXGeometryManager::scheduleRenderingUpdate):
* Source/WebCore/accessibility/AXLogger.cpp:
(WebCore::operator<<):
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::AXObjectCache):
(WebCore::AXObjectCache::findModalNodes):
(WebCore::AXObjectCache::updateCurrentModalNode):
(WebCore::AXObjectCache::rootObject):
(WebCore::AXObjectCache::setIsolatedTreeRoot):
(WebCore::AXObjectCache::handleMenuOpened):
(WebCore::AXObjectCache::handleLiveRegionCreated):
(WebCore::AXObjectCache::notificationPostTimerFired):
(WebCore::AXObjectCache::handleMenuItemSelected):
(WebCore::AXObjectCache::onPopoverToggle):
(WebCore::AXObjectCache::handleAriaExpandedChange):
(WebCore::AXObjectCache::handleLabelChanged):
(WebCore::AXObjectCache::protectedDocument const):
(WebCore::AXObjectCache::characterOffsetForPoint):
(WebCore::AXObjectCache::performDeferredCacheUpdate):
(WebCore::AXObjectCache::rootWebArea):
(WebCore::AXObjectCache::treeData):
(WebCore::AXObjectCache::updateRelationsIfNeeded):
(WebCore::AXObjectCache::addRelation):
* Source/WebCore/accessibility/AXObjectCache.h:
* Source/WebCore/accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::detachRemoteParts):
* Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.cpp:
(WebCore::AXIsolatedTree::createEmpty):
(WebCore::AXIsolatedTree::create):
(WebCore::AXIsolatedTree::updateRootScreenRelativePosition):

Canonical link: https://commits.webkit.org/289089@main